src/yini_test/cases/golden/strict/valid/strings/classic-triple-quoted-string.strict.yini
@yini strict

^ Strings
message = C"""Line one\nLine two\tTabbed"""

/END
