src/yini_test/cases/golden/strict/invalid/concatenation/number-plus-string.strict.yini
@yini strict

^ Concat
label = 8080 + " is the port"

/END
